fix: update styles of input components to prevent overflow and improve layout

--- a/packages/components/src/components/date-picker/date-picker.css
+++ b/packages/components/src/components/date-picker/date-picker.css
@@ -134,7 +134,6 @@ duet-date-picker .duet-date__toggle:active scale-icon-content-calendar {
   top: 0;
   left: 0;
   color: var(--telekom-color-text-and-icon-additional);
-  display: flex;
   z-index: var(--z-index-label);
   position: absolute;
   transition: all var(--telekom-motion-duration-transition)
@@ -142,6 +141,11 @@ duet-date-picker .duet-date__toggle:active scale-icon-content-calendar {
   pointer-events: none;
   font: var(--telekom-text-style-ui);
   transform: translate(var(--telekom-spacing-composition-space-05), 0.875rem);
+
+  width: calc( 100% - var(--telekom-spacing-composition-space-17)  ); 
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 duet-date-picker .duet-date__input::placeholder {
