--- a/packages/components/src/components/textarea/textarea.css
+++ b/packages/components/src/components/textarea/textarea.css
@@ -139,13 +139,17 @@ scale-textarea {
   top: 0;
   left: 0;
   color: var(--color-label);
-  display: flex;
   z-index: var(--z-index-label);
   position: absolute;
   transition: var(--transition-label);
   pointer-events: none;
   font: var(--telekom-text-style-ui);
   transform: translate(var(--spacing-x-control), 0.875rem);
+
+  width: calc( 100% - var(--spacing-x-control) * 2); 
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 .textarea--has-focus .textarea__label,
 .animated .textarea__label {
